# DataScienceProject-front

./: README  README.md  app.py  pyproject.toml  requirements.txt  startup.txt
.github/workflows/: azure-deploy-frontend.yml
src/routes/: auth.py  upload_pdf.py  upload_pdf_test.py  users.py
static/: scripts.js  scroll.js  style.css  style_tmp.css
templates/: access_denied.html  base.html  login.html  upload_pdf.html  upload_pdf_success.html
templates/PDF/: upload_pdf.html  upload_pdf_success.html
templates/auth/: email_not_confirmed.html  logout.html  registration_failure.html  registration_success.html  signup.html
templates/pdf/: base2.html  document_exists.html  no_choice_doc.html  no_text.html  upload_pdf.html  upload_pdf_test.html  upload_pdf_test_temp.html
templates/users/: delete_or_not.html  user.html
